--- a/notebooks/passage-reranking.ipynb
+++ b/notebooks/passage-reranking.ipynb
@@ -31,7 +31,15 @@
         "api_type = 'openai'  # or 'azure'\n",
         "num_aggregates = 20  # number of permutations (paper uses 20 for passage reranking)\n",
         "num_limit = 10  # number of queries to process (set to 200 for full DL19/DL20; 10 for testing)\n",
-        "track = 'dl19'  # 'dl19' or 'dl20'\n"
+        "track = 'dl19'  # 'dl19' or 'dl20'\n",
+        "\n",
+        "# Force reload permsc module to pick up code changes\n",
+        "import importlib\n",
+        "import sys\n",
+        "if 'permsc' in sys.modules:\n",
+        "    importlib.reload(sys.modules['permsc'])\n",
+        "if 'permsc.data' in sys.modules:\n",
+        "    importlib.reload(sys.modules['permsc.data'])\n"
       ]
     },
     {
@@ -73,16 +81,12 @@
       "metadata": {},
       "outputs": [
         {
-          "ename": "KeyError",
-          "evalue": "'494835'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load dataset based on selected track\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m track \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdl19\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m----> 3\u001b[0m     ds \u001b[38;5;241m=\u001b[39m \u001b[43mMSMarcoDataset\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcollection_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../data/msmarco/collection.tsv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m        \u001b[49m\u001b[43mqueries_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../data/trec-dl19/msmarco-test2019-queries.tsv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m        \u001b[49m\u001b[43mqrels_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../data/trec-dl19/2019qrels-pass.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtop1000_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../data/trec-dl19/msmarco-passagetest2019-top1000.tsv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmax_passages\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\n\u001b[1;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m track \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdl20\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     11\u001b[0m     ds \u001b[38;5;241m=\u001b[39m MSMarcoDataset(\n\u001b[1;32m     12\u001b[0m         collection_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/msmarco/collection.tsv\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     13\u001b[0m         queries_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/trec-dl20/msmarco-test2020-queries.tsv\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     16\u001b[0m         max_passages\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m\n\u001b[1;32m     17\u001b[0m     )\n",
-            "File \u001b[0;32m~/Documents/diff_psc/permsc/data.py:281\u001b[0m, in \u001b[0;36mMSMarcoDataset.__init__\u001b[0;34m(self, collection_path, queries_path, qrels_path, top1000_path, max_passages, use_passage_from_top1000)\u001b[0m\n\u001b[1;32m    278\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mqrels \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_load_qrels(qrels_path)\n\u001b[1;32m    280\u001b[0m \u001b[38;5;66;03m# Load top-1000 retrieval results (qid -> list of (pid, query, passage, rank))\u001b[39;00m\n\u001b[0;32m--> 281\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mretrieval_results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_load_top1000\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtop1000_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    283\u001b[0m \u001b[38;5;66;03m# Create list of query IDs that have retrieval results\u001b[39;00m\n\u001b[1;32m    284\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mquery_ids \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mretrieval_results\u001b[38;5;241m.\u001b[39mkeys())\n",
-            "File \u001b[0;32m~/Documents/diff_psc/permsc/data.py:363\u001b[0m, in \u001b[0;36mMSMarcoDataset._load_top1000\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m    360\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m qid \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m results:\n\u001b[1;32m    361\u001b[0m         results[qid] \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m--> 363\u001b[0m \u001b[43mresults\u001b[49m\u001b[43m[\u001b[49m\u001b[43mqid\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mappend((pid, query, passage, rank))\n\u001b[1;32m    364\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(parts) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m4\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m parts[\u001b[38;5;241m2\u001b[39m]\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39misdigit():\n\u001b[1;32m    365\u001b[0m     rank \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-            "\u001b[0;31mKeyError\u001b[0m: '494835'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dataset loaded: 200 queries\n",
+            "First query: which amendment protects a person from cruel or unusual punishment...\n",
+            "First query has 100 passages\n"
           ]
         }
       ],
@@ -114,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -168,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -186,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -232,9 +236,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Running pipeline on 10 queries with 20 permutations each...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Completed 10 queries\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Run pipeline\n",
         "print(f\"Running pipeline on {num_limit} queries with {num_aggregates} permutations each...\")\n",
@@ -246,9 +288,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Aggregating rankings...\n"
+          ]
+        },
+        {
+          "ename": "TypingError",
+          "evalue": "Failed in nopython mode pipeline (step: nopython frontend)\nFailed in nopython mode pipeline (step: nopython frontend)\nNo implementation of function Function(<built-in function setitem>) found for signature:\n \n >>> setitem(array(float64, 1d, C), float64, int64)\n \nThere are 16 candidate implementations:\n  - Of which 14 did not match due to:\n  Overload of function 'setitem': File: <numerous>: Line N/A.\n    With argument(s): '(array(float64, 1d, C), float64, int64)':\n   No match.\n  - Of which 2 did not match due to:\n  Overload in function 'SetItemBuffer.generic': File: numba/core/typing/arraydecl.py: Line 219.\n    With argument(s): '(array(float64, 1d, C), float64, int64)':\n   Rejected as the implementation raised a specific error:\n     NumbaTypeError: Unsupported array index type float64 in [float64]\n  raised from /Users/arul/Documents/diff_psc/venv/lib/python3.10/site-packages/numba/core/typing/arraydecl.py:102\n\nDuring: typing of setitem at /Users/arul/Documents/diff_psc/permsc/aggregator/utils.py (119)\n\nFile \"../permsc/aggregator/utils.py\", line 119:\ndef _ranks_from_preferences_1d(preferences: np.ndarray) -> np.ndarray:\n    <source elided>\n        if pref != -1:\n            ranks[pref] = i\n            ^\n\nDuring: resolving callee type: type(CPUDispatcher(<function _ranks_from_preferences_1d at 0x11b565750>))\nDuring: typing of call at /Users/arul/Documents/diff_psc/permsc/aggregator/utils.py (34)\n\nDuring: resolving callee type: type(CPUDispatcher(<function _ranks_from_preferences_1d at 0x11b565750>))\nDuring: typing of call at /Users/arul/Documents/diff_psc/permsc/aggregator/utils.py (34)\n\n\nFile \"../permsc/aggregator/utils.py\", line 34:\ndef _cdk_graph_from_prefs_1d(preferences: np.ndarray):\n    ranks = _ranks_from_preferences_1d(preferences)\n    ^\n",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypingError\u001b[0m                               Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Aggregate rankings\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAggregating rankings...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43maggregate_rankings\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprefs_list\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAggregated \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(results)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m rankings\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "Cell \u001b[0;32mIn[5], line 7\u001b[0m, in \u001b[0;36maggregate_rankings\u001b[0;34m(prefs_list)\u001b[0m\n\u001b[1;32m      4\u001b[0m results \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m prefs \u001b[38;5;129;01min\u001b[39;00m prefs_list:\n\u001b[0;32m----> 7\u001b[0m     aggregated \u001b[38;5;241m=\u001b[39m \u001b[43maggregator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maggregate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprefs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m     results\u001b[38;5;241m.\u001b[39mappend(aggregated)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m results\n",
+            "File \u001b[0;32m~/Documents/diff_psc/permsc/aggregator/exact.py:56\u001b[0m, in \u001b[0;36mKemenyOptimalAggregator.aggregate\u001b[0;34m(self, preferences, verbose)\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21maggregate\u001b[39m(\u001b[38;5;28mself\u001b[39m, preferences: np\u001b[38;5;241m.\u001b[39mndarray, verbose: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m np\u001b[38;5;241m.\u001b[39mndarray:\n\u001b[0;32m---> 56\u001b[0m     cdk_graph \u001b[38;5;241m=\u001b[39m \u001b[43mcdk_graph_from_preferences\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpreferences\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     57\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msolve_from_graph(cdk_graph, verbose)\n",
+            "File \u001b[0;32m~/Documents/diff_psc/permsc/aggregator/utils.py:65\u001b[0m, in \u001b[0;36mcdk_graph_from_preferences\u001b[0;34m(preferences)\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _cdk_graph_from_prefs_2d(preferences)\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m preferences\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m---> 65\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_cdk_graph_from_prefs_1d\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpreferences\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPreferences must be a 1D or 2D array, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpreferences\u001b[38;5;241m.\u001b[39mndim\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mD.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+            "File \u001b[0;32m~/Documents/diff_psc/venv/lib/python3.10/site-packages/numba/core/dispatcher.py:468\u001b[0m, in \u001b[0;36m_DispatcherBase._compile_for_args\u001b[0;34m(self, *args, **kws)\u001b[0m\n\u001b[1;32m    464\u001b[0m         msg \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(e)\u001b[38;5;241m.\u001b[39mrstrip()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mThis error may have been caused \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    465\u001b[0m                \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mby the following argument(s):\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00margs_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    466\u001b[0m         e\u001b[38;5;241m.\u001b[39mpatch_message(msg)\n\u001b[0;32m--> 468\u001b[0m     \u001b[43merror_rewrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43me\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtyping\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    469\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m errors\u001b[38;5;241m.\u001b[39mUnsupportedError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    470\u001b[0m     \u001b[38;5;66;03m# Something unsupported is present in the user code, add help info\u001b[39;00m\n\u001b[1;32m    471\u001b[0m     error_rewrite(e, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124munsupported_error\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+            "File \u001b[0;32m~/Documents/diff_psc/venv/lib/python3.10/site-packages/numba/core/dispatcher.py:409\u001b[0m, in \u001b[0;36m_DispatcherBase._compile_for_args.<locals>.error_rewrite\u001b[0;34m(e, issue_type)\u001b[0m\n\u001b[1;32m    407\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n\u001b[1;32m    408\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 409\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(\u001b[38;5;28;01mNone\u001b[39;00m)\n",
+            "\u001b[0;31mTypingError\u001b[0m: Failed in nopython mode pipeline (step: nopython frontend)\nFailed in nopython mode pipeline (step: nopython frontend)\nNo implementation of function Function(<built-in function setitem>) found for signature:\n \n >>> setitem(array(float64, 1d, C), float64, int64)\n \nThere are 16 candidate implementations:\n  - Of which 14 did not match due to:\n  Overload of function 'setitem': File: <numerous>: Line N/A.\n    With argument(s): '(array(float64, 1d, C), float64, int64)':\n   No match.\n  - Of which 2 did not match due to:\n  Overload in function 'SetItemBuffer.generic': File: numba/core/typing/arraydecl.py: Line 219.\n    With argument(s): '(array(float64, 1d, C), float64, int64)':\n   Rejected as the implementation raised a specific error:\n     NumbaTypeError: Unsupported array index type float64 in [float64]\n  raised from /Users/arul/Documents/diff_psc/venv/lib/python3.10/site-packages/numba/core/typing/arraydecl.py:102\n\nDuring: typing of setitem at /Users/arul/Documents/diff_psc/permsc/aggregator/utils.py (119)\n\nFile \"../permsc/aggregator/utils.py\", line 119:\ndef _ranks_from_preferences_1d(preferences: np.ndarray) -> np.ndarray:\n    <source elided>\n        if pref != -1:\n            ranks[pref] = i\n            ^\n\nDuring: resolving callee type: type(CPUDispatcher(<function _ranks_from_preferences_1d at 0x11b565750>))\nDuring: typing of call at /Users/arul/Documents/diff_psc/permsc/aggregator/utils.py (34)\n\nDuring: resolving callee type: type(CPUDispatcher(<function _ranks_from_preferences_1d at 0x11b565750>))\nDuring: typing of call at /Users/arul/Documents/diff_psc/permsc/aggregator/utils.py (34)\n\n\nFile \"../permsc/aggregator/utils.py\", line 34:\ndef _cdk_graph_from_prefs_1d(preferences: np.ndarray):\n    ranks = _ranks_from_preferences_1d(preferences)\n    ^\n"
+          ]
+        }
+      ],
       "source": [
         "# Aggregate rankings\n",
         "print(\"Aggregating rankings...\")\n",
